# QTX-Quintessence-Tensor-eXchange

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSING.md  README.md  build_and_test.ps1  build_and_test.sh
benchmarks/: micro_tenant_demo.cpp  oom_survival_test.cpp  perf_microbench.cpp  quality_probe.cpp  quantize_microbench.cpp  spsc_microbench.cpp
docs/: _config.yml  index.md
docs/_layouts/: article.html
docs/assets/css/: style.css
docs/development/: EDGE_CASES_REPORT.md  EPIC1_FP8_REPORT.md  EPIC2_GGML_LEGACY_REPORT.md  EPIC3_K_QUANTS_REPORT.md  EPIC4_I_QUANTS_REPORT.md  PERFORMANCE_REPORT.md  PHASE2_HARDENING_REPORT.md  README.md
examples/: real_ggml_demo.cpp
include/qtx/arena/: fractal_arena.hpp  gen_id.hpp
include/qtx/core/: contracts.hpp  fpe_guard.hpp  platform.hpp  types.hpp
include/qtx/ipc/: spsc_ring_buffer.hpp
include/qtx/quantize/: iq_codebooks.hpp  quantizer.hpp  quantizer_simd.hpp
include/qtx/selector/: axiom_selector.hpp
include/qtx/tiered/: cold_codec.hpp  tiered_bridge.hpp
include/qtx/unsafe/ggml_bridge/: bridge.hpp
src/: iq_codebooks.cpp
src/unsafe/ggml_bridge/: bridge.cpp  safety.hpp
tests/: ggml_test_shim.c  test_axiom_selector.cpp  test_boundary_safety.cpp  test_cold_codec.cpp  test_fractal_arena.cpp  test_gen_id.cpp  test_ggml_bridge.cpp  test_harness.hpp  test_integration.cpp  test_main.cpp  test_quantizer.cpp  test_spsc_ring_buffer.cpp  test_tiered_bridge.cpp
